fix button color on mobile

--- a/src/Components/Hero/Hero.scss
+++ b/src/Components/Hero/Hero.scss
@@ -26,6 +26,7 @@
 
   button {
     background: var(--colorYellowPrimary);
+    color: var(--colorBlack);
     border: none;
     position: absolute;
     right: 0;
