--- a/src/Components/Reservations/Reservations.scss
+++ b/src/Components/Reservations/Reservations.scss
@@ -102,6 +102,7 @@
 
   button {
     border: none;
+    color: black;
     display: flex;
     flex-direction: row;
     align-items: center;
